--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1227,28 +1227,33 @@ form{
 
 .list-menu{
   position: absolute;
-  border: 1px solid rgb(117, 115, 115);
-  //max-height: 50px;
-  //display: flex;
+  border: 1px solid rgb(187, 187, 187);
+  color: #838383;
   max-height: 15em;
+  min-height: 2px;
+  min-width: 30px;
   user-select: none;
   background-color: #ffffff;
 
   overflow: auto;
   padding: 0px;
+  font-size: 9pt;
+
+  &:not(.active){
+    visibility: hidden;
+  }
   &.close {
     visibility: hidden;
     
   }
   .option{
     text-transform: uppercase;
-    padding: 0px;
+    padding: 2px;
     line-height: 1.5em;
-    background-color: rgb(202, 196, 196);
-    margin: 0px;
+    
   }
   .option.active{
-    background-color: red;
+    background-color: rgb(0, 81, 255);
     color:white;
   }
 
