--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -16,7 +16,7 @@ body{
   background-color: white;
   border:1px solid rgb(73, 73, 73);
   font-size: 10pt;
-  max-height: 15em;
+  //max-height: 15em;
   overflow: auto;
   span:nth-child(1){
     display: inline-block;
